--- a/src/main/resources/templates/pages/auth/login.html
+++ b/src/main/resources/templates/pages/auth/login.html
@@ -34,7 +34,19 @@
                                 <button type="submit" >로그인</button>
 <!--                                <a href="#">로그인</a>-->
                             </form>
-                        </div>
+                                <div class="social-flex">
+                                    <h1 class="h1">소셜 간편 로그인</h1>
+                                    <a class="social-login google" th:href="@{/oauth2/authorization/google}">
+                                        <img th:src="@{/images/web_light_sq_na@1x.png}" alt="google">
+                                    </a>
+                                    <a class="social-login kakao" th:href="@{/oauth2/authorization/kakao}">
+                                       <img th:src="@{/images/web_kakao.png}" alt="kakao">
+                                    </a>
+                                    <a class="social-login naver" th:href="@{/oauth2/authorization/naver}">
+                                       <img th:src="@{/images/web_naver.png}" alt="naver">
+                                  </a>
+                                </div>
+                            </div>
                     </section>
                     <section>
                         <div class="selction-info">
